# picolibc

./: CMakeLists.txt  meson.build  meson_options.txt  picolibc.h.in
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
dummyhost/: iob.c
newlib/libc/include/: meson.build
newlib/libc/include/sys/: features.h  meson.build
newlib/libc/machine/xtensa/: meson.build
newlib/libc/machine/xtensa/sys/: meson.build
newlib/libc/misc/: meson.build
newlib/libc/stdio/: findfp.c  fseeko.c  stdio.h  vfprintf.c  vfwprintf.c
newlib/libc/tinystdio/: CMakeLists.txt  bufio.c  fclose.c  fdevopen.c  fdopen.c  fgetc.c  fgets.c  fgetwc.c  fileno.c  flockfile.c  fputc.c  fputwc.c  fread.c  freopen.c  fseek.c  ftell.c  fwrite.c  meson.build  posixiob.c  posixiob_stderr.c  posixiob_stdin.c  posixiob_stdout.c  rewind.c  stdio.h  stdio_private.h  vfprintf.c  vfscanf.c
newlib/libm/machine/riscv/: CMakeLists.txt  e_acoshl.c  e_acosl.c  e_asinl.c  e_atan2l.c  e_atanhl.c  e_coshl.c  e_expl.c  e_fmodl.c  e_lgammal.c  e_log10l.c  e_log2l.c  e_logl.c  e_powl.c  e_remainderl.c  e_sinhl.c  e_tgammal.c  meson.build  s_asinhl.c  s_atanl.c  s_cbrtl.c  s_ceill.c  s_cosl.c  s_erfl.c  s_exp2l.c  s_expm1l.c  s_fabsl.c  s_fdiml.c  s_floorl.c  s_fmal.c  s_fmaxl.c  s_fminl.c  s_frexpl.c  s_ilogbl.c  s_llrintl.c  s_llroundl.c  s_log1pl.c  s_logbl.c  s_lrintl.c  s_lroundl.c  (+15 more)
newlib/libm/machine/xtensa/: CMakeLists.txt  meson.build  sf_sqrt.c
scripts/: cross-xtensa-esp-elf.txt
semihost/: iob.c
