#
# SPDX-License-Identifier: BSD-3-Clause
#
# Copyright © 2019 Keith Packard
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
#
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above
#    copyright notice, this list of conditions and the following
#    disclaimer in the documentation and/or other materials provided
#    with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its
#    contributors may be used to endorse or promote products derived
#    from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
# FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
# COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
# INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
# HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
# STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
# OF THE POSSIBILITY OF SUCH DAMAGE.
#
srcs_libm_machine = [
  's_copysign.c',
  's_fabs.c',
  's_finite.c',
  's_fma.c',
  's_fmax.c',
  's_fmin.c',
  's_fpclassify.c',
  's_isinf.c',
  's_isnan.c',
  's_llrint.c',
  's_llround.c',
  's_lrint.c',
  's_lround.c',
  's_sqrt.c',
  'sf_copysign.c',
  'sf_fabs.c',
  'sf_finite.c',
  'sf_fma.c',
  'sf_fmax.c',
  'sf_fmin.c',
  'sf_fpclassify.c',
  'sf_isinf.c',
  'sf_isnan.c',
  'sf_llrint.c',
  'sf_llround.c',
  'sf_lrint.c',
  'sf_lround.c',
  'sf_sqrt.c',
  'e_acoshl.c',
  'e_acosl.c',
  'e_asinl.c',
  'e_atan2l.c',
  'e_atanhl.c',
  'e_coshl.c',
  'e_expl.c',
  'e_fmodl.c',
  'e_lgammal.c',
  'e_log10l.c',
  'e_log2l.c',
  'e_logl.c',
  'e_powl.c',
  'e_remainderl.c',
  'e_sinhl.c',
  'e_tgammal.c',
  's_asinhl.c',
  's_atanl.c',
  's_cbrtl.c',
  's_ceill.c',
  's_cosl.c',
  's_erfl.c',
  's_exp2l.c',
  's_expm1l.c',
  's_fabsl.c',
  's_fdiml.c',
  's_floorl.c',
  's_fmal.c',
  's_fmaxl.c',
  's_fminl.c',
  's_frexpl.c',
  's_ilogbl.c',
  's_llrintl.c',
  's_llroundl.c',
  's_log1pl.c',
  's_logbl.c',
  's_lrintl.c',
  's_lroundl.c',
  's_modfl.c',
  's_nanl.c',
  's_nearbyintl.c',
  's_nextafterl.c',
  's_nexttoward.c',
  's_nexttowardf.c',
  's_remquol.c',
  's_rintl.c',
  's_roundl.c',
  's_scalbln.c',
  's_scalbnl.c',
  's_sinl.c',
  's_tanhl.c',
  's_tanl.c',
  's_truncl.c',
]

src_libm_machine = files(srcs_libm_machine)
